[Design] project_column and project_entry: Humanize date/time
+ Ensure that `.date`-style is defined globally in app.scss

--- a/global_change_lab/templates/partials/project_entry.html
+++ b/global_change_lab/templates/partials/project_entry.html
@@ -1,8 +1,9 @@
+{% load humanize %}
 {% load embed_video_tags %}
 
 <div class="project" id="project-{{ project.id }}">
   {% if not hide_links %}<a href="{{ project.get_absolute_url }}">{% endif %}
-    <h6 class="title">{{ project.name }}</h6><span class="date">{{ project.created_at }}</span>
+    <h6 class="title">{{ project.name }}</h6><span class="date">{{ project.created_at|naturaltime }}</span>
   {% if not hide_links %}</a>{% endif %}
 
   <div class="content">
