--- a/scss/comments.scss
+++ b/scss/comments.scss
@@ -50,7 +50,7 @@
       height: rem-calc(20px);
     }
     .date {
-      line-height: $h6-font-size;
+      // line-height: $h6-font-size;
       display: inline-block;
     }
     .author {
