--- a/skills/templates/skills/partials/project_column.html
+++ b/skills/templates/skills/partials/project_column.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 {% load embed_video_tags %}
 
       <div class="project project-column">
@@ -5,7 +6,7 @@
         <h6 class="title">{{ project.name }}</h6>
         {% if not hide_links %}</a>{% endif %}
 
-        <span class="date">{{ project.created_at }}</span>
+        <span class="date">{{ project.created_at|naturaltime }}</span>
 
         <div class="content">
           <p>{{ project.content }}</p>
