--- a/skills/templates/skills/partials/project_column.html
+++ b/skills/templates/skills/partials/project_column.html
@@ -3,7 +3,7 @@
 
       <div class="project project-column">
         {% if not hide_links %}<a href="{{ project.get_absolute_url }}">{% endif %}
-        <h6 class="title">{{ project.name }}</h6>
+        <h6 class="project-title">{{ project.name }}</h6>
         {% if not hide_links %}</a>{% endif %}
 
         <span class="date">{{ project.created_at|naturaltime }}</span>
