[Design] Add global `.author` style and update comment design

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -280,6 +280,11 @@ p.skill-description, p.trainingbit-description {
   font-weight: 200;
 }
 
+.author {
+  font-size: rem-calc(16px);
+  font-weight: 700;
+}
+
 .delete-dropdown {
   padding: 0.5rem;
   font-size: 0.9rem;
