--- a/scss/app.scss
+++ b/scss/app.scss
@@ -21,6 +21,7 @@
 @import "scss/login_signup";
 @import "scss/profile";
 @import "scss/user_progress";
+@import "scss/imageupload";
 
 %entypo {
   font-family: 'EntypoRegular';
