[Design] Change "4 days, 22 hours" to just "4 days"
+ Change the color of the date to be gray (to tone it down a bit)

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -279,6 +279,7 @@ p.skill-description, p.trainingbit-description {
 .date {
   font-size: 0.65rem;
   font-weight: 200;
+  color: #969696;
 }
 
 .author {
