--- a/global_change_lab/templates/partials/project_entry.html
+++ b/global_change_lab/templates/partials/project_entry.html
@@ -1,9 +1,9 @@
-{% load humanize %}
+{% load gcl_utils %}
 {% load embed_video_tags %}
 
 <div class="project" id="project-{{ project.id }}">
   {% if not hide_links %}<a href="{{ project.get_absolute_url }}">{% endif %}
-    <h6 class="project-title">{{ project.name }}</h6><span class="date">{{ project.created_at|naturaltime }}</span>
+    <h6 class="project-title">{{ project.name }}</h6><span class="date">{{ project.created_at|pretty_timesince }}</span>
   {% if not hide_links %}</a>{% endif %}
 
   <div class="content">
