[Update] project_entry: Add option to show comments-heading
+ and show that heading in `project_view`

--- a/global_change_lab/templates/partials/project_entry.html
+++ b/global_change_lab/templates/partials/project_entry.html
@@ -40,6 +40,10 @@
 
   {% if not hide_comments %}
     {# Comments section #}
+    {% if show_comments_header %}
+    <hr>
+    <h3>Comments</h3>
+    {% endif %}
     <div class="comments">
       {% include 'skills/partials/comment_list.html' with comments=project.root_comments %}
       <div class="comment-form">
