--- a/skills/templates/skills/partials/comment_entry.html
+++ b/skills/templates/skills/partials/comment_entry.html
@@ -44,7 +44,7 @@
 
     {# Reply to comment button #}
     {% if not hide_reply %}
-    {% if comment.allow_thread %}<a href="{% url 'skills:comment_post' %}" data-project-pk="{{ project.pk }}" data-parent-pk="{{ comment.pk }}" class="reply">Reply</a>{% endif %}
+    {% if comment.allow_thread %}<a href="{% url 'skills:comment_post' %}" data-parent-pk="{{ comment.pk }}" class="reply">Reply</a>{% endif %}
     {% endif %}
 
     {% if show_project %}
