--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -3,7 +3,16 @@
   max-width: rem-calc(500px);
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1rem;
+  // margin-top: 1rem;
+
+  .leader {
+    margin-top: -1.0rem;
+    margin-left: -4.8rem;
+  }
+  .project-title {
+    margin-top: 1.3rem;
+    font-size: $h2-font-size;
+  }
 }
 
 /******* PROJECT SUBMISSION FORM *******/
