--- a/scss/trainingbit_grid.scss
+++ b/scss/trainingbit_grid.scss
@@ -91,8 +91,8 @@ li.trainingbit {
       position: absolute;
       bottom: 0;
       left: 0;
-      padding-left: $padding-size;
-      padding-right: $padding-size;
+      padding-left: $padding-size / 2;
+      padding-right: $padding-size / 2;
     }
   }
 }
