--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -37,7 +37,7 @@
     <div class="text-container">
     <h1>{{skill.name}}</h1>
     <div class="metadata">
-      {# <span class="icon small heart red"></span> {{ trainingbit.users_in_progress.count }} #}
+      <span class="icon small heart red"></span><span class="count">{{ skill.likes.count }}</span>
       <span class="icon users red"></span><span class="count">{{ skill.users_completed.count }}</span>
       <span class="icon chat red"></span><span class="count">{{ project_count }}</span>
     </div>
@@ -52,6 +52,11 @@
       <a class="button small begin" href="{% url 'skills:skill_start' skill.id %}">Start this skill</a>
     {% endif %}
   {% endif %}
+
+  <a class="button small {% if user_like %}unlike{% else %}like{% endif %}" href="{% url 'skills:like' %}"
+     data-csrf_token="{{ csrf_token }}"
+     data-object_id="{{ skill.pk }}"
+     data-content_type="{{ content_type_pk }}">{% if user_like %}Unlike{% else %}Like{% endif %}</a>
 </div>
 
 <hr>
