--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -2,6 +2,8 @@
 
 {% load socialaccount %}
 
+{% block nav_buttons %}{% endblock %}
+
 {% block content %}
 
 <div id="login-modal" class="reveal-modal small" data-reveal>
