--- a/scss/front_page.scss
+++ b/scss/front_page.scss
@@ -31,6 +31,8 @@ div#front-page-greeter {
   }
   a.button.join {
     margin-top: 1rem;
+    padding: 1rem;
+    font-size: rem-calc(14px);
   }
 }
 
