[Design] skill_overview: Show no of users who have completed skill
+ skill_view: Show number of training bits in skill as "chat" icon

--- a/skills/templates/skills/partials/skill_list_large.html
+++ b/skills/templates/skills/partials/skill_list_large.html
@@ -15,8 +15,8 @@
       <div class="info">
         <span class="metadata">{{ skill.trainingbits.count }} Training Bits</span>
         <hr>
-        <span class="icon small heart red"></span> 23
-        <span class="icon small chat red"></span> 9
+        <span class="icon small heart red"></span> {{ skill.likes.count }}
+        <span class="icon small users red"></span> {{ skill.users_completed.count }}
       </div>
     </div>
   </li>
