--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -39,7 +39,7 @@
     <div class="metadata">
       <span class="icon small heart red"></span><span class="count">{{ skill.likes.count }}</span>
       <span class="icon users red"></span><span class="count">{{ skill.users_completed.count }}</span>
-      <span class="icon chat red"></span><span class="count">{{ project_count }}</span>
+      <span class="icon chat red"></span><span class="count">{{ skill.trainingbits.count }}</span>
     </div>
   </div>
   </div>
