--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -37,9 +37,9 @@
     <div class="text-container">
     <h1>{{skill.name}}</h1>
     <div class="metadata">
+      <span class="trainingbit-count">{{ skill.trainingbits.count }} Training Bits</span><br>
       <span class="icon small heart red"></span><span class="count">{{ skill.likes.count }}</span>
       <span class="icon users red"></span><span class="count">{{ skill.users_completed.count }}</span>
-      <span class="icon chat red"></span><span class="count">{{ skill.trainingbits.count }}</span>
     </div>
   </div>
   </div>
