--- a/scss/trainingbit_cover.scss
+++ b/scss/trainingbit_cover.scss
@@ -54,6 +54,7 @@ $left-margin: rem-calc(40px);
       float: left;
       width: rem-calc(45px);
       margin-right: rem-calc(13px);
+      margin-bottom: rem-calc(10px);
     }
     .date {
       font-size: rem-calc(13px);
