--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -19,7 +19,8 @@
   {% csrf_token %}
   <div class="input-field-row">
     <div class="input-field">
-      <input type="text" name="name" placeholder="Name your training bit" value="{{ trainingbit.name }}">
+      {{ form.name }}
+      {{ form.name.errors }}
     </div>
     <div class="help-text">
       <h6>Title</h6>
@@ -41,7 +42,8 @@
   </div>
   <div class="input-field-row">
     <div class="input-field">
-      <textarea name="description" placeholder="Describe your training bit">{{trainingbit.description}}</textarea>
+      {{ form.description }}
+      {{ form.description.errors }}
     </div>
     <div class="help-text">
       <h6>Description</h6>
