[Design] Add hovering to skill_overview and trainingbits_overview
+ Change hover color of buttons (non-hover: red, hover: black)

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -292,6 +292,9 @@ p.skill-description, p.trainingbit-description {
   font-size: 0.9rem;
 }
 
+.button:hover {
+  background-color: black;
+}
 
 // Or selectively include components
 // @import
