--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -82,6 +82,10 @@ body.skill-view {
         width: 85%;
         font-weight: 200;
 
+        a:hover h2 {
+          color:black;
+        }
+
         p {
           font-size: 0.9rem;
           font-weight: 200;
